@@ -3,7 +3,7 @@ package com.picturecompressor.service;
 import com.picturecompressor.exception.ProcessingException;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Value;
-import org.springframework.stereotype.Component;
+import org.springframework.stereotype.Service;
 import reactor.core.publisher.Mono;
 import reactor.core.scheduler.Schedulers;
 
@@ -14,48 +14,53 @@ import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.ArrayList;
 import java.util.List;
+import java.util.Objects;
 import java.util.concurrent.TimeUnit;
+import java.util.concurrent.atomic.AtomicBoolean;
 
 /**
- * Неблокирующий процессор для сжатия GIF-файлов с использованием 
- * внешней утилиты gifsicle, которая потребляет значительно меньше памяти,
- * чем нативная Java-реализация
+ * Non-closing processor for compressing GIF files using
+ * external GIFSicle utility, which consumes much less memory,
+ * than native java realeization
  */
 @Slf4j
-@Component
+@Service
 public class GifsicleProcessor {
 
     @Value("${gifsicle.path:gifsicle}")
     private String gifsicleExecutable;
-    
     @Value("${gifsicle.timeout-seconds:10}")
     private int timeoutSeconds;
-
     @Value("${gifsicle.optimization-level:3}")
     private int optimizationLevel;
-    
-    @Value("${gifsicle.lossy-level:30}")
-    private int lossyLevel;
-    
     @Value("${gifsicle.use-lossy:false}")
     private boolean useLossy;
+    private final AtomicBoolean gifsicleAvailableCached = new AtomicBoolean(false);
+    private volatile boolean gifsicleAvailabilityChecked = false;
     
     /**
-     * Сжимает GIF-файл с использованием gifsicle
+     * Clutch GIF file using gifsicle
      *
-     * @param gifBytes исходные байты GIF-файла
-     * @param compressionLevel уровень сжатия (0-1), где 0 - без сжатия, 1 - максимальное сжатие
-     * @return Mono с байтами сжатого GIF-файла
+     * @param gifBytes The starting bytes of the GIF file
+     * @param compressionLevel compression level (0-1), where 0 - maximum compression, 1 - without compression
+     * @return Mono with bytes of a compressed GIF file
      */
     public Mono<byte[]> compressGif(byte[] gifBytes, float compressionLevel) {
+        if (compressionLevel >= 1) {
+            log.info("Compression level is 0, returning original GIF. Size: {} bytes", gifBytes.length);
+            return Mono.just(gifBytes);
+        }
         return Mono.fromCallable(() -> {
-            Path tempInputFile = Files.createTempFile("input_", ".gif");
-            Path tempOutputFile = Files.createTempFile("output_", ".gif");
+            Path tempInputFile = null;
+            Path tempOutputFile = null;
             try {
+                tempInputFile = Files.createTempFile("input_", ".gif");
+                tempOutputFile = Files.createTempFile("output_", ".gif");
                 Files.write(tempInputFile, gifBytes);
                 List<String> command = buildGifsicleCommand(tempInputFile, tempOutputFile, compressionLevel);
                 log.debug("Executing gifsicle command: {}", String.join(" ", command));
                 ProcessBuilder processBuilder = new ProcessBuilder(command);
+                long start = System.currentTimeMillis();
                 Process process = processBuilder.start();
                 StringBuilder errorOutput = new StringBuilder();
                 try (BufferedReader reader = new BufferedReader(new InputStreamReader(process.getErrorStream()))) {
@@ -67,34 +72,33 @@ public class GifsicleProcessor {
                 boolean completed = process.waitFor(timeoutSeconds, TimeUnit.SECONDS);
                 if (!completed) {
                     process.destroyForcibly();
-                    throw new ProcessingException("Gifsicle process timed out after " + timeoutSeconds + " seconds");
+                    throw new ProcessingException("Gifsicle process timed out after %s seconds".formatted(timeoutSeconds));
                 }
                 int exitCode = process.exitValue();
                 if (exitCode != 0) {
                     log.error("Gifsicle failed with exit code {}: {}", exitCode, errorOutput);
-                    throw new ProcessingException("Gifsicle failed with exit code " + exitCode + ": " + errorOutput);
+                    throw new ProcessingException("Gifsicle failed with exit code %s : %s".formatted(exitCode, errorOutput));
                 }
                 byte[] result = Files.readAllBytes(tempOutputFile);
+                long duration = System.currentTimeMillis() - start;
                 log.info(
-                        "GIF successfully compressed with gifsicle, original size: {}, compressed size: {}, ratio: {}",
+                        "GIF successfully compressed. Orig: {} bytes, Compressed: {} bytes, Ratio: {}%, CompressionLevel: {}, Time: {} ms",
                         gifBytes.length,
                         result.length,
-                        result.length > 0 ? "%.2f%%".formatted((float) result.length / gifBytes.length * 100) : "N/A"
+                        gifBytes.length > 0 ? String.format("%.2f", (float) result.length / gifBytes.length * 100) : "N/A",
+                        compressionLevel,
+                        duration
                 );
                 return result;
             } finally {
-                try {
-                    Files.deleteIfExists(tempInputFile);
-                    Files.deleteIfExists(tempOutputFile);
-                } catch (IOException e) {
-                    log.warn("Failed to delete temporary files", e);
-                }
+                deleteTempFileIfExists(tempInputFile);
+                deleteTempFileIfExists(tempOutputFile);
             }
         }).subscribeOn(Schedulers.boundedElastic());
     }
     
     /**
-     * Строит команду для gifsicle в зависимости от уровня сжатия
+     * Builds a command for Gifsicle depending on the compression level
      */
     private List<String> buildGifsicleCommand(Path inputFile, Path outputFile, float compressionLevel) {
         List<String> command = new ArrayList<>();
@@ -102,7 +106,7 @@ public class GifsicleProcessor {
         int optLevel = Math.max(1, (int) Math.ceil(optimizationLevel * compressionLevel));
         command.add("--optimize=" + optLevel);
         if (useLossy) {
-            int actualLossyLevel = (int) (100 - compressionLevel * 100); // масштабирование 0.5-1.0 -> 0-100%
+            int actualLossyLevel = (int) (100 - compressionLevel * 100);
             command.add("--lossy=" + actualLossyLevel);
         }
         if (compressionLevel > 0.7) {
@@ -116,32 +120,55 @@ public class GifsicleProcessor {
         command.add(outputFile.toString());
         return command;
     }
-    
+
     /**
-     * Проверяет, доступен ли gifsicle в системе
-     * 
-     * @return Mono<Boolean> true, если gifsicle доступен
+     * Checks whether Gifsicle is available in the system (cached for performance).
+     *
+     * @return true, if Gifsicle is available
      */
-    public Mono<Boolean> isGifsicleAvailable() {
-        return Mono.fromCallable(() -> {
-            try {
-                Process process = new ProcessBuilder(gifsicleExecutable, "--version").start();
-                boolean completed = process.waitFor(timeoutSeconds, TimeUnit.SECONDS);
-                if (!completed) {
-                    process.destroyForcibly();
-                    log.warn("Gifsicle check timed out");
-                    return false;
-                }
-                int exitCode = process.exitValue();
-                return exitCode == 0;
-            } catch (InterruptedException e) {
-                log.warn("Interrupted!", e);
-                Thread.currentThread().interrupt();
-                return false;
-            } catch (Exception e) {
-                log.warn("Gifsicle is not available: {}", e.getMessage());
+    public boolean isGifsicleAvailable() {
+        if (!gifsicleAvailabilityChecked) {
+            gifsicleAvailableCached.set(checkGifsicleAvailability());
+            gifsicleAvailabilityChecked = true;
+        }
+        return gifsicleAvailableCached.get();
+    }
+
+    // Helper method for actual gifsicle check
+    private boolean checkGifsicleAvailability() {
+        try {
+            Process process = new ProcessBuilder(gifsicleExecutable, "--version").start();
+            boolean completed = process.waitFor(timeoutSeconds, TimeUnit.SECONDS);
+            if (!completed) {
+                process.destroyForcibly();
+                log.warn("Gifsicle check timed out");
                 return false;
             }
-        }).subscribeOn(Schedulers.boundedElastic());
+            int exitCode = process.exitValue();
+            if (exitCode == 0) {
+                log.info("Gifsicle is available: {}.", gifsicleExecutable);
+            } else {
+                log.warn("Gifsicle is NOT available. Exit code: {}", exitCode);
+            }
+            return exitCode == 0;
+        } catch (InterruptedException e) {
+            log.warn("Interrupted during gifsicle check!", e);
+            Thread.currentThread().interrupt();
+            return false;
+        } catch (Exception e) {
+            log.warn("Gifsicle is not available: {}", e.getMessage());
+            return false;
+        }
+    }
+
+    // Helper for safe temp file removal
+    private void deleteTempFileIfExists(Path path) {
+        if (Objects.nonNull(path)) {
+            try {
+                Files.deleteIfExists(path);
+            } catch (IOException e) {
+                log.warn("Failed to delete temporary file: {}", path, e);
+            }
+        }
     }
 } 
